--- a/Navigationexample/GamePage.xaml
+++ b/Navigationexample/GamePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Navigationexample.MainPage"
+    x:Class="Navigationexample.GamePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Navigationexample"
@@ -8,9 +8,14 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button x:Name="PlayButton" Content="Play"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Click="PlayButton_Click"/>
+        <TextBlock Text="Game Page"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"/>
+        <Button x:Name="BackButton"
+                Content="Back"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Right"
+                Click="BackButton_Click"/>
+
     </Grid>
 </Page>
